Code analysis nits